// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationUX should match snapshot for valid and fallback: fallback-confirmation 1`] = `
{
  "confirmed": true,
  "meta": {
    "decisionSupportTriggered": false,
    "emotionalTrustScore": 0.95,
    "fieldConfirmations": {},
    "usedConfirmationUX": true,
  },
  "updatedIntent": {
    "_meta": {
      "allFields": [
        "business_type",
        "primary_goal",
        "tone",
        "challenges",
        "motivator",
      ],
      "conflictDetected": false,
      "emotionalAnchorPresent": false,
      "errors": [],
      "fallbackSummary": "",
      "hasMotivationHook": false,
      "injectedFields": [],
      "intentConfidence": 0.5,
      "usedSparkSignal": false,
      "usedVisionCatcher": false,
      "validationPassed": true,
    },
    "business_type": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "SaaS",
      "wasConfirmed": true,
    },
    "challenges": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": [
        "competition",
      ],
      "wasConfirmed": true,
    },
    "motivator": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "impact",
      "wasConfirmed": true,
    },
    "primary_goal": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "Grow users",
      "wasConfirmed": true,
    },
    "tone": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "professional",
      "wasConfirmed": true,
    },
  },
}
`;

exports[`ConfirmationUX should match snapshot for valid and fallback: valid-confirmation 1`] = `
{
  "confirmed": true,
  "meta": {
    "decisionSupportTriggered": false,
    "emotionalTrustScore": 0.95,
    "fieldConfirmations": {},
    "usedConfirmationUX": true,
  },
  "updatedIntent": {
    "_meta": {
      "allFields": [
        "business_type",
        "primary_goal",
        "tone",
        "challenges",
        "motivator",
      ],
      "conflictDetected": false,
      "emotionalAnchorPresent": true,
      "errors": [],
      "fallbackSummary": "",
      "hasMotivationHook": false,
      "injectedFields": [],
      "intentConfidence": 0.95,
      "usedSparkSignal": false,
      "usedVisionCatcher": false,
      "validationPassed": true,
    },
    "business_type": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "SaaS",
      "wasConfirmed": true,
    },
    "challenges": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": [
        "competition",
      ],
      "wasConfirmed": true,
    },
    "motivator": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "impact",
      "wasConfirmed": true,
    },
    "primary_goal": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "Grow users",
      "wasConfirmed": true,
    },
    "tone": {
      "confidence": 0.95,
      "errorState": false,
      "overrideable": true,
      "source": "rules",
      "value": "professional",
      "wasConfirmed": true,
    },
  },
}
`;
